--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,27 @@
 {
-    "name": "venturecraft/revisionable",
+    "name": "ricksuggs/revisionable",
     "license": "MIT",
     "description": "Keep a revision history for your models without thinking, created as a package for use with Laravel 4",
-    "keywords": ["model", "laravel", "ardent", "revision", "history"],
-    "homepage": "http://github.com/venturecraft/revisionable",
+    "keywords": ["model", "laravel", "revision", "history"],
+    "homepage": "https://github.com/ricksuggs/revisionable",
     "authors": [
         {
             "name": "Chris Duell",
-            "email": "me@chrisduell.com"
+            "email": "me@chrisduell.com",
+            "role": "Original Developer"
+        },
+        {
+            "name": "Rick Suggs",
+            "homepage": "https://github.com/ricksuggs",
+            "role": "Contributing Developer"
         }
     ],
     "support": {
-        "issues": "https://github.com/VentureCraft/revisionable/issues",
-        "source": "https://github.com/VentureCraft/revisionable"
+        "issues": "https://github.com/ricksuggs/revisionable/issues",
+        "source": "https://github.com/ricksuggs/revisionable"
+    },
+    "replace":{
+        "venturecraft/revisionable":">=1.10"
     },
     "require": {
         "php": ">=5.3.0",
